syntax = "proto3";
option go_package = "./pb";

import "ws.proto";

package pbChat;



message MsgDataToMQ{
  string token = 1;
  string operationID = 2;
  server_api_params.MsgData msgData = 3;
}


message MsgDataToDB {
  server_api_params.MsgData msgData = 1;
  string operationID = 2;

}
message PushMsgDataToMQ{
  string OperationID = 1;
  server_api_params.MsgData msgData = 2;
  string pushToUserID = 3;
}
message PushMsgToSuperGroupDataToMQ {
  server_api_params.MsgData msgData = 1;
  string superGroupID = 2;
  string OperationID = 3;
}
//message PullMessageReq {
//  string UserID = 1;
//  int64 SeqBegin = 2;
//  int64 SeqEnd = 3;
//  string OperationID = 4;
//}
//
//message PullMessageResp {
//  int32 ErrCode = 1;
//  string ErrMsg = 2;
//  int64 MaxSeq = 3;
//  int64 MinSeq = 4;
//  repeated GatherFormat SingleUserMsg = 5;
//  repeated GatherFormat GroupUserMsg = 6;
//}
//message PullMessageBySeqListReq{
//  string UserID = 1;
//  string OperationID = 2;
//  repeated int64 seqList =3;
//}
message GetMaxAndMinSeqReq {
  string UserID = 1;
}
message GetMaxAndMinSeqResp {
  uint32 MaxSeq = 1;
  uint32 MinSeq = 2;
  uint32 ErrCode = 3;
  string ErrMsg = 4;
}
message GetMaxAndMinSuperGroupSeqReq {
  repeated string  SuperGroupIDList = 1;
}
message GetMaxAndMinSuperGroupSeqRespItem {
  string SuperGroupID = 1;
  uint32 MaxSeq = 2;
  uint32 MinSeq = 3;
}
message GetMaxAndMinSuperGroupSeqResp {
  repeated GetMaxAndMinSuperGroupSeqRespItem SuperGroupSeqList = 1;
  uint32 ErrCode = 2;
  string ErrMsg = 3;
}

message SendMsgReq {
  string token = 1;
  server_api_params.MsgData msgData = 2;
}

message SendMsgResp {
  string serverMsgID = 1;
  string clientMsgID = 2;
  int64  serverTime = 3;

  int32 ErrCode = 4;
  string ErrMsg = 5;
}

message WrapPullMessageBySeqListReq {
  server_api_params.PullMessageBySeqListReq PullMessageBySeqListReq = 1;
}
message WrapPullMessageBySeqListResp {
  server_api_params.PullMessageBySeqListResp PullMessageBySeqListResp = 1;
}

message PullMessageBySuperGroupSeqListReq {
  string groupID = 1;
  repeated uint32 seqList = 2;
}
service Chat {
  rpc GetMaxAndMinSeq(GetMaxAndMinSeqReq) returns(GetMaxAndMinSeqResp);
  rpc GetSuperGroupMaxAndMinSeq(GetMaxAndMinSuperGroupSeqReq) returns(GetMaxAndMinSuperGroupSeqResp);
  rpc PullMessageBySeqList(WrapPullMessageBySeqListReq) returns(WrapPullMessageBySeqListResp);
  rpc PullMessageBySuperGroupSeqList(PullMessageBySuperGroupSeqListReq) returns(WrapPullMessageBySeqListResp);
  rpc SendMsg(SendMsgReq) returns(SendMsgResp);
}
